# ARAP

./: .gitignore  CMakeLists.txt  README.md
common/: Eigen.cmake  ITK.cmake  Python.cmake  config.cmake
include/core/: contour.hpp  image.hpp
include/transformer/: icpTransformer.hpp  transformer.hpp
src/: main.cpp
src/core/: contour.cpp
src/transformer/: icpTransformer.cpp
